--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,13 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.0'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile 'com.github.kittinunf.fuel:fuel:1.9.0' //for JVM
+    compile 'com.github.kittinunf.fuel:fuel-android:1.9.0' //for Android
+    compile 'com.github.kittinunf.fuel:fuel-rxjava:1.9.0' //for RxJava support
+    compile 'com.github.kittinunf.fuel:fuel-livedata:1.9.0' //for LiveData support
+    compile 'com.github.kittinunf.fuel:fuel-gson:1.9.0' //for Gson support
 }
+
 repositories {
     mavenCentral()
 }
