--- a/build.gradle
+++ b/build.gradle
@@ -36,8 +36,11 @@ dependencies {
     compile 'com.github.kittinunf.fuel:fuel-rxjava:1.9.0' //for RxJava support
     compile 'com.github.kittinunf.fuel:fuel-livedata:1.9.0' //for LiveData support
     compile 'com.github.kittinunf.fuel:fuel-gson:1.9.0' //for Gson support
+    // Anko
+    compile 'org.jetbrains.anko:anko-sdk25:+' // sdk19, sdk21, sdk23 are also available
 }
 
 repositories {
     mavenCentral()
+    maven { url 'https://dl.bintray.com/jetbrains/anko' }
 }
