--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     compile 'com.github.kittinunf.fuel:fuel-livedata:1.9.0' //for LiveData support
     compile 'com.github.kittinunf.fuel:fuel-gson:1.9.0' //for Gson support
     // Anko
-    compile 'org.jetbrains.anko:anko-sdk25:+' // sdk19, sdk21, sdk23 are also available
+    compile 'org.jetbrains.anko:anko-sdk25:0.10.1' // sdk19, sdk21, sdk23 are also available
 }
 
 repositories {
